--- a/home.hbs
+++ b/home.hbs
@@ -30,6 +30,7 @@
             <tbody>
                 {{#each sanpham}}
                 <tr>
+                    <th scope="row">{{@index}}</th>
                     <th scope="row">{{this.tensp}}</th>
                     <td>{{this.giasp}}</td>
                     <td>{{this.soluong}}</td>
