--- a/themsanpham.hbs
+++ b/themsanpham.hbs
@@ -1,22 +1,21 @@
 <form action="/themsanpham" method="post">
     <div class="form-group">
-        <label for="tensp" style="color: white;"> Ten </label>
-        <input type="text" name="tensp" class="form-control" id="tensp"
+        <label for="tensp" style="color: gray;"> Ten </label>
+        <input type="text" name="tensp" class="form-control" id="tensp" required
             placeholder="Ten">
     </div>
     <div class="form-group">
-        <label for="giasp" style="color: white;"> Gia </label>
-        <input type="text" name="giasp" class="form-control" id="giasp"
-            placeholder="Gia">
+        <label for="giasp" style="color: gray;"> Gia </label>
+        <input type="number" name="giasp" class="form-control" id="giasp"
+        required placeholder="Gia">
 
     <div class="form-group">
-        <label for="soluong" style="color: white;"> So luong </label>
-        <input type="text" name="soluong" id="soluong" class="form-control"
-            placeholder="soluong">
+        <label for="soluong" style="color: gray;"> So luong </label>
+        <input type="number" name="soluong" id="soluong" class="form-control" required placeholder="soluong">
     </div>
     <div class="form-group">
-        <label for="khuyenmai" style="color: white;"> Khuyen mai </label>
-        <input type="text" name="khuyenmai" id="khuyenmai" class="form-control"
+        <label for="khuyenmai" style="color: gray;"> Khuyen mai </label>
+        <input type="number" name="khuyenmai" id="khuyenmai" class="form-control" required
             placeholder="khuyenmai">
     </div>
     <div class="modal-footer">
